--- a/src/containers/Pannel/Pannel.styles.scss
+++ b/src/containers/Pannel/Pannel.styles.scss
@@ -2,6 +2,7 @@
     .pannel-body {
         display: grid;
         grid-template-columns: 20% 80%;
-        height: 100vh;
+        height: calc(100vh - 46px);
+		margin-top: 46px;
     }
 }
